update
aggiornato swagger e aggiunta route games/getHeadToHead nel localhost 3000
